grammar/test/corpus/declarations.txt
==================
Script declarations and members
==================

ScriptName Example:Fixture extends Quest DebugOnly
Import Utility

Struct Entry
    String Name
    Int Count = 1
EndStruct

CustomEvent Changed
Guard DataGuard
Int Value RequiresGuard(DataGuard)
Actor Property Owner Auto Mandatory

---

(source_file (script_declaration name: (qualified_identifier (identifier) (identifier)) parent: (identifier) (newline)) (import_declaration module: (identifier) (newline)) (newline) (struct_declaration name: (identifier) (newline) (struct_member type: (type name: (builtin_type)) name: (identifier) (newline)) (struct_member type: (type name: (builtin_type)) name: (identifier) value: (integer) (newline)) (newline)) (newline) (custom_event_declaration name: (identifier) (newline)) (guard_declaration name: (identifier) (newline)) (variable_declaration type: (type name: (builtin_type)) name: (identifier) (guard_requirement guards: (guard_list (identifier))) (newline)) (auto_property_definition type: (type name: (identifier)) name: (identifier) (newline)) (newline))
