grammar/test/corpus/dialects.txt
==================
Skyrim declarations
==================

ScriptName SkyrimDialectFixture extends Quest Conditional

Int StoredValue

Int Property CurrentValue
    Int Function Get()
        Return StoredValue
    EndFunction

    Function Set(Int value)
        StoredValue = value
    EndFunction
EndProperty

Function ContinueParameters(Int first, \
    Int second)
EndFunction

Auto State Waiting
    Event OnBeginState()
    EndEvent
EndState

---

(source_file
  (newline)
  (script_declaration
    (identifier)
    (identifier))
  (newline)
  (newline)
  (variable_declaration
    (type
      (builtin_type))
    (identifier))
  (newline)
  (newline)
  (property_definition
    (type
      (builtin_type))
    (identifier)
    (newline)
    (function_definition
      (type
        (builtin_type))
      (identifier)
      (parameters)
      (newline)
      (return_statement
        (identifier))
      (newline))
    (newline)
    (newline)
    (function_definition
      (identifier)
      (parameters
        (parameter
          (type
            (builtin_type))
          (identifier)))
      (newline)
      (assignment_statement
        (identifier)
        (identifier))
      (newline))
    (newline))
  (newline)
  (newline)
  (function_definition
    (identifier)
    (parameters
      (parameter
        (type
          (builtin_type))
        (identifier))
      (line_continuation)
      (parameter
        (type
          (builtin_type))
        (identifier)))
    (newline))
  (newline)
  (newline)
  (state_declaration
    (identifier)
    (newline)
    (event_definition
      (identifier)
      (parameters)
      (newline))
    (newline))
  (newline))

==================
Fallout 4 declarations
==================

ScriptName ZedPapyrus:FalloutDialectFixture extends Quest Const

Struct WorkItem
    String Name
    Int Count = 0
EndStruct

CustomEvent WorkQueued

Group Configuration CollapsedOnRef
    Bool Property Enabled = True Auto
EndGroup

ExampleLibrary:Entry Property ExternalEntry Auto Mandatory

Bool Function IsActor(Var value)
    Return value Is Actor
EndFunction

---

(source_file
  (newline)
  (script_declaration
    (qualified_identifier
      (identifier)
      (identifier))
    (identifier))
  (newline)
  (newline)
  (struct_declaration
    (identifier)
    (newline)
    (struct_member
      (type
        (builtin_type))
      (identifier))
    (newline)
    (struct_member
      (type
        (builtin_type))
      (identifier)
      (integer))
    (newline))
  (newline)
  (newline)
  (custom_event_declaration
    (identifier))
  (newline)
  (newline)
  (group_declaration
    (identifier)
    (newline)
    (auto_property_definition
      (type
        (builtin_type))
      (identifier)
      (boolean))
    (newline))
  (newline)
  (newline)
  (auto_property_definition
    (type
      (qualified_identifier
        (identifier)
        (identifier)))
    (identifier))
  (newline)
  (newline)
  (function_definition
    (type
      (builtin_type))
    (identifier)
    (parameters
      (parameter
        (type
          (builtin_type))
        (identifier)))
    (newline)
    (return_statement
      (type_test_expression
        (identifier)
        (type
          (identifier))))
    (newline))
  (newline))
