grammar/test/corpus/guards.txt
==================
Starfield guard blocks
==================

ScriptName GuardFixture
Guard DataGuard
Guard LogicGuard ProtectsFunctionLogic

Function Update(Int aiValue) RequiresGuard(LogicGuard)
    LockGuard(DataGuard)
        Int previous = aiValue
    EndLockGuard

    TryLockGuard DataGuard
        Return
    ElseTryLockGuard LogicGuard
        Return
    Else
        Return
    EndTryLockGuard
EndFunction

---

(source_file
  (newline)
  (script_declaration
    name: (identifier))
  (newline)
  (guard_declaration
    name: (identifier))
  (newline)
  (guard_declaration
    name: (identifier))
  (newline)
  (newline)
  (function_definition
    name: (identifier)
    parameters: (parameters
      (parameter
        type: (type
          name: (builtin_type))
        name: (identifier)))
    (guard_requirement
      guards: (guard_list
        (identifier)))
    (newline)
    (lock_guard_statement
      guards: (guard_list
        (identifier))
      (newline)
      (variable_declaration
        type: (type
          name: (builtin_type))
        name: (identifier)
        value: (identifier))
      (newline))
    (newline)
    (newline)
    (try_lock_guard_statement
      guards: (guard_list
        (identifier))
      (newline)
      (return_statement)
      (newline)
      (else_try_lock_guard_clause
        guards: (guard_list
          (identifier))
        (newline)
        (return_statement)
        (newline))
      (else_clause
        (newline)
        (return_statement)
        (newline)))
    (newline))
  (newline))
