grammar/test/corpus/statements.txt
==================
Statements and assignment operators
==================

ScriptName StatementFixture

Int Function Evaluate(Int value)
    Int result = value
    result = 1
    result += 2
    result -= 3
    result *= 4
    result /= 2
    result %= 2

    If result > 0
        Debug.Trace("positive")
    ElseIf result < 0
        Debug.Trace("negative")
    Else
        Debug.Trace("zero")
    EndIf

    While result < 10
        result += 1
    EndWhile

    Return result
EndFunction

---

(source_file
  (newline)
  (script_declaration
    (identifier))
  (newline)
  (newline)
  (function_definition
    (type
      (builtin_type))
    (identifier)
    (parameters
      (parameter
        (type
          (builtin_type))
        (identifier)))
    (newline)
    (variable_declaration
      (type
        (builtin_type))
      (identifier)
      (identifier))
    (newline)
    (assignment_statement
      (identifier)
      (integer))
    (newline)
    (assignment_statement
      (identifier)
      (integer))
    (newline)
    (assignment_statement
      (identifier)
      (integer))
    (newline)
    (assignment_statement
      (identifier)
      (integer))
    (newline)
    (assignment_statement
      (identifier)
      (integer))
    (newline)
    (assignment_statement
      (identifier)
      (integer))
    (newline)
    (newline)
    (if_statement
      (binary_expression
        (identifier)
        (integer))
      (newline)
      (expression_statement
        (call_expression
          (member_expression
            (identifier)
            (identifier))
          (arguments
            (argument
              (string)))))
      (newline)
      (elseif_clause
        (binary_expression
          (identifier)
          (integer))
        (newline)
        (expression_statement
          (call_expression
            (member_expression
              (identifier)
              (identifier))
            (arguments
              (argument
                (string)))))
        (newline))
      (else_clause
        (newline)
        (expression_statement
          (call_expression
            (member_expression
              (identifier)
              (identifier))
            (arguments
              (argument
                (string)))))
        (newline)))
    (newline)
    (newline)
    (while_statement
      (binary_expression
        (identifier)
        (integer))
      (newline)
      (assignment_statement
        (identifier)
        (integer))
      (newline))
    (newline)
    (newline)
    (return_statement
      (identifier))
    (newline))
  (newline))
